plugins {
    id 'java'
    id 'application'
}

group = 'org.sun.ghosh.virtualthreads'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_20
targetCompatibility = JavaVersion.VERSION_20

compileJava{
    dependsOn clean
}

compileJava {
    options.compilerArgs.addAll(
            ['--enable-preview',
             '--add-modules', 'jdk.incubator.concurrent'
            ])
}

ext {
//    javaMainClass = "org.sun.ghosh.virtualthreads.MyFavoriteJavaSites"
    javaMainClass = "org.sun.ghosh.virtualthreads.PasswordUtil"
}

application {
    mainClassName = javaMainClass
    applicationDefaultJvmArgs = ["--enable-preview",
                                 '--add-modules',
                                 'jdk.incubator.concurrent']
}

run {
//    args = ["PLATFORM"]
//    args = ["VIRTUAL"]
//    args = ["QUICK"]
//    args = ["ALL_OR_NONE"]
//    args = ["SCOPED_VALUE"]
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}